--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <title>Luke Hefson</title>
-    <link rel="stylesheet" href="styles.css?v=1.0">
+  <title>Luke Hefson</title>
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
+
 <body>
-    <p>Go ahead and <i>view source</i></p>
-
- <!--
-
- Hi.
-
- I'm a Product Manager working at GitHub.
-
- You can find me as @lukehefson pretty much everywhere.
-
- -->
-
+  <h1>Luke Hefson</h1>
+  <p>Product Manager at GitHub</p>
+  <p>Find me on <a href="https://twitter.com/lukehefson/">Twitter</a> & <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a></p>
+  <p>I did <a href="https://github.blog/2018-08-28-announcing-paper-cuts/">a thing once 📄✂️</a></p>
 </body>
+
 </html>
