--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Luke Hefson</h1>
-  <p>Product Manager at GitHub</p>
+  <p>Product Manager <a href="https://github.com/lukehefson">at GitHub</a></p>
   <p>Find me on <a href="https://twitter.com/lukehefson/">Twitter</a> & <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a></p>
   <p>I did <a href="https://github.blog/2018-08-28-announcing-paper-cuts/">a thing once 📄✂️</a></p>
 </body>
