--- a/disco/index.html
+++ b/disco/index.html
@@ -11,11 +11,8 @@
 </head>
 
 <body>
-  <p>live link will be up just before 17:30 GMT (kids set) & 20:30 GMT (grown-ups)</p>
-  <!--
   <p>for disco fun, go here:</p>
-  <p><a href="https://example.com">link</a></p>
-  -->
+  <p><a href="https://youtu.be/VQZ2LUHqpAE">https://youtu.be/VQZ2LUHqpAE</a></p>
 </body>
 
 </html>
