--- a/disco/index.html
+++ b/disco/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <p>for disco fun, go here:</p>
-  <p><a href="https://youtu.be/VQZ2LUHqpAE">https://youtu.be/VQZ2LUHqpAE</a></p>
+  <p><a href="https://youtu.be/inTpN6Oi9lg</a>https://youtu.be/inTpN6Oi9lg</p>
 </body>
 
 </html>
