--- a/disco/index.html
+++ b/disco/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <p>for disco fun, go here:</p>
-  <p><a href="https://youtu.be/inTpN6Oi9lg</a>test</p>
+  <p>for disco fun, go here: https://youtu.be/inTpN6Oi9lg</p>
 </body>
 
 </html>
