--- a/disco/index.html
+++ b/disco/index.html
@@ -5,13 +5,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>lukehefson/disco</title>
+  <title>Luke Hefson</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
 
 <body>
-  <p>for disco fun, go here: https://youtu.be/inTpN6Oi9lg</p>
+  <p>Ain't no disco like a hefson disco</p>
+  <!-- <p>For disco fun, go here: <a href="https://example.com">link</a></p> -->
 </body>
 
 </html>
