--- a/disco/index.html
+++ b/disco/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <p>Ain't no disco like a hefson disco</p>
-  <!-- <p>For disco fun, go here: <a href="https://example.com">link</a></p> -->
+  <p><a href="https://example.com">YouTube Live stream 🔗</a></p>
 </body>
 
 </html>
