--- a/disco/index.html
+++ b/disco/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <p><a href="https://youtu.be/zDAGxSDOv5s">YouTube Live stream here 🔗</a></p>
+  <p><a href="https://example.com">🕺🔗</a></p>
 </body>
 
 </html>
