--- a/disco/index.html
+++ b/disco/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <p><a href="https://example.com">🕺🔗</a></p>
+  <p><a href="https://www.youtube.com/watch?v=ib-9y1M8jQI">Click for YouTube live link 🕺🔗</a></p>
 </body>
 
 </html>
