--- a/disco/index.html
+++ b/disco/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <p><a href="https://youtu.be/490Jb25xLws">click for disco link yo 🕺🔗</a></p>
+  <p><a href="www.example.com">🕺🔗</a></p>
 </body>
 
 </html>
