--- a/disco/index.html
+++ b/disco/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <p><a href="www.example.com">🕺🔗</a></p>
+  <p><a href="https://www.example.com">🕺🔗</a></p>
 </body>
 
 </html>
