--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
   <h1>Luke Hefson</h1>
-  <p>Product Manager <a href="https://github.com/lukehefson">at GitHub 🐙🐈</a></p>
+  <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee</p>
+  <p>Currently looking for my next adventure</p>
   <p>Find me on <a href="https://twitter.com/lukehefson/">Twitter</a> & <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a></p>
 </body>
 
