--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body>
   <h1>Luke Hefson</h1>
-  <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee</p>
-  <p>Currently looking for my next adventure</p>
-  <p>Find me on <a href="https://twitter.com/lukehefson/">Twitter</a> & <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a></p>
+  <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
+  <p>Currently looking for my next adventure 🕵️‍♂️</p>
+  <p>You can see a list of my experiences & accomplishments on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> 🕵️‍♂️</p>
+  <p>I have been known to use <a href="https://twitter.com/lukehefson/">Twitter</a> 🦜</p>
 </body>
 
 </html>
