--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
   <p>Currently <a href="https://www.linkedin.com/posts/lukehefson_openforwork-opportunities-whatsnext-activity-6960544805273624576-HhV5">looking for my next adventure</a> 🕵️‍♂️</p>
   <p>You can see a list of my accomplishments on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> 👨‍💻</p>
-  <p>I have been known to use <a href="https://twitter.com/lukehefson/">Twitter</a> 🦜</p>
+  <p>I have been known to use <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜 and now <a href="https://hachyderm.io/@lukehefson" rel="me">Mastodon</a>🐘</p>
 </body>
 
 </html>
