--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Luke Hefson</h1>
   <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
-  <p>Work stuff on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> 👨‍💻</p>
+  <p>You can see my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> 👨‍💻</p>
   <p>I have been known to use <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜 and now <a href="https://hachyderm.io/@lukehefson" rel="me">Mastodon</a> 🐘</p>
 </body>
 
