--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!doctype html>
-
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width">
   <title>Luke Hefson</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
-
 <body>
+  <div class="container">
+    <div class="box">
   <h1>Luke Hefson</h1>
   <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
   <p>You can see my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> 👨‍💻</p>
-  <p>I have been known to use <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜 and now <a href="https://hachyderm.io/@lukehefson" rel="me">Mastodon</a> 🐘</p>
+<p>---</p>
+<p><details>
+  <summary># Consulting & fractional services</summary>
+  <p>Coming soon!</p>
+</details></p>
+<p><details>
+  <summary># Contact & Socials</summary>
+  <ul>
+  <li><a href="mailto:lukehefson@gmail.com" rel="me">Email</a></li>
+  <li><a href="https://github.com/lukehefson">GitHub</a></li>
+  <li><a href="https://twitter.com/lukehefson" rel="me">Twitter</a></li>
+  <li><a href="https://hachyderm.io/@lukehefson" rel="me">Mastodon</a></li>
+  </ul>
+</details></p>
 </body>
-
 </html>
