--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
     <div class="box">
   <h1>Luke Hefson</h1>
   <p>Product leader and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
-  <p>You can see my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> 👨‍💻</p>
+  <p>Check out my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> to see the things I've shipped 🚢</p>
+  <p><a href="mailto:lukehefson@gmail.com">Email me</a> any time 📥 or find me on <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜</p>
 <p>---</p>
-<p><details>
-  <summary># Consulting & fractional services</summary>
-  <p>Coming soon!</p>
-</details></p>
-<p><details>
-  <summary># Contact & Socials</summary>
-  <ul>
-  <li><a href="mailto:lukehefson@gmail.com" rel="me">Email</a></li>
-  <li><a href="https://github.com/lukehefson">GitHub</a></li>
-  <li><a href="https://twitter.com/lukehefson" rel="me">Twitter</a></li>
-  <li><a href="https://hachyderm.io/@lukehefson" rel="me">Mastodon</a></li>
-  </ul>
-</details></p>
+<details>
+  <summary># I offer consulting & fractional services 🤲</summary>
+    <ul>
+      <li><p>Go to market product strategy</p></li>
+      <li><p>Product operations</p></li>
+      <li><p>A <a href="https://sprig.com/podcast/luke-hefson">Paper Cuts project</a> tailored for <em>your</em> org</p></li>
+      <li><p>Career coaching</p></li>
+      <li><p>Product quality/QA strategy</p></li>
+      <li><p>Building an Associate Product Manager (APM) program</p></li>
+      <li><p>Product management hiring and process</p></li>
+    </ul>
+</details>
+</br>
+<details>
+  <summary># People have nice things to say about me 💌</summary>
+    <ul>
+      <li><p>Tesimonials coming soon!</p></li>
+    </ul>
+</details>
 </body>
 </html>
+      
