--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <li><p>Go to market product strategy</p></li>
       <li><p>Product operations</p></li>
       <li><p>A <a href="https://sprig.com/podcast/luke-hefson">Paper Cuts project</a> tailored for <em>your</em> org</p></li>
-      <li><p>Career coaching</p></li>
-      <li><p>Product quality/QA strategy</p></li>
+      <li><p>What I call: "Avoid the need to hire a PM" (aka helping engineers, managers, founders & other non-PMs to become more product-focused)</p></li>
+      <li><p>QA strategy</p></li>
+      <li><p>Career coaching for junior PMs</p></li>
       <li><p>Building an Associate Product Manager (APM) program</p></li>
       <li><p>Product management hiring and process</p></li>
     </ul>
