--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
     
     body {
-    background-color: FFFFFF;
     font-family: 'Source Code Pro', monospace;
     margin-top: 80px;
     }
@@ -26,11 +25,10 @@
       text-transform: uppercase;
       font-weight: lighter;
       font-size: 40px;
-      color: black;
     }
     a {
       text-decoration: none;
-      color: dimgrey;
+      color: #404040;
       position: relative;
     }
     a::before {
