--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       font-weight: lighter;
       font-size: 40px;
     }
-    a {
+    a, details {
       text-decoration: none;
       color: #404040;
       position: relative;
@@ -45,6 +45,9 @@
     a:hover::before {
       bottom: 0;
       height: 100%;
+    }
+    details {
+      cursor: pointer;
     }
   </style>
 </head>
