--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p><a href="mailto:lukehefson@gmail.com">Email me</a> any time 📥 or find me on <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜</p>
     <p>---</p>
     <details>
-      <summary># I offer <a href="#consulting">consulting & fractional services</a> 🤲</summary>
+      <summary># I offer consulting & fractional services 🤲</summary>
         <ul>
           <li><p>Go to market product strategy</p></li>
           <li><p>Product operations</p></li>
