--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="box">
     <h1>Luke Hefson</h1>
-    <p>Product leader at <a href="https://render.com">Render</a> and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
+    <p>Product leader at <a href="https://render.com">Render</a> 🎨 and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
     <p>Check out my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> to see the things I've shipped 🚢</p>
     <p><a href="mailto:lukehefson@gmail.com">Email me</a> any time 📥 or find me on <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜</p>
     <p>---</p>
