--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <p>Check out my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> to see the things I've shipped 🚢</p>
     <p><a href="mailto:lukehefson@gmail.com">Email me</a> any time 📥 or find me on <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜</p>
     <p>---</p>
-    <details>
-      <summary>I like to mentor and talk about the following stuff 👇. Hit me up if I can help ya 🤲.</summary>
+    <p>I like to mentor and talk about the following stuff 👇. Hit me up if I can help ya 🤲.
         <ul>
           <li><p>Go to market product strategy</p></li>
           <li><p>Product operations</p></li>
@@ -71,7 +70,7 @@
           <li><p>Building an Associate Product Manager (APM) program</p></li>
           <li><p>Product management hiring and process</p></li>
         </ul>
-    </details>
+    </p>
     </br>
     </br>
     </br>
