--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>Luke Hefson</title>
+  <title>David Pentland</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <style>
@@ -54,25 +54,8 @@
   <body>
     <div class="container">
       <div class="box">
-    <h1>Luke Hefson</h1>
-    <p>Product leader at <a href="https://render.com">Render</a> 🎨 and early <a href="https://github.com/lukehefson">GitHub</a> employee 🐙🐈‍⬛</p>
-    <p>Check out my work history on <a href="https://uk.linkedin.com/in/lukehefson">LinkedIn</a> to see the things I've shipped 🚢</p>
-    <p><a href="mailto:lukehefson@gmail.com">Email me</a> any time 📥 or find me on <a href="https://twitter.com/lukehefson" rel="me">Twitter</a> 🦜</p>
-    <p>---</p>
-    <p>I like to mentor and talk about the following stuff 👇. Hit me up if I can help ya 🤲.
-        <ul>
-          <li><p>Go to market product strategy</p></li>
-          <li><p>Product operations</p></li>
-          <li><p>Running a <a href="https://sprig.com/podcast/luke-hefson">Paper Cuts project</a></p></li>
-          <li><p>What I call: "Avoid the need to hire a PM" (helping engineers, managers, founders & other non-PMs to become more product-focused)</p></li>
-          <li><p>QA strategy</p></li>
-          <li><p>Career coaching for junior PMs</p></li>
-          <li><p>Building an Associate Product Manager (APM) program</p></li>
-          <li><p>Product management hiring and process</p></li>
-        </ul>
-    </p>
-    </br>
-    </br>
-    </br>
-  </body>
+    <h1>David Pentland</h1>
+    <p>Welcome to digital business card.</p> There's not much of interest here. You probably want to <a href="https://github.com/trade-luke/trade-luke.github.io/blob/master/David-Pentland_Portfolio-Dec2023.pdf">check out my portfolio instead</a> 👀</p>
+    <p>If you like what you see, feel free to <a href="mailto:dave@ardourdesign.com">email me anytime</a> 📥</p>
+    </body>
 </html>     
