--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
     <h1>David Pentland</h1>
     <p>Welcome to my digital business card 🤲</p>
     <p>There's not much of interest here. You probably want to <a href="https://github.com/trade-luke/trade-luke.github.io/blob/master/David-Pentland_Portfolio-Dec2023.pdf">check out my portfolio instead</a> 👀</p>
-    <p>If you like what you see, feel free to <a href="mailto:dave@ardourdesign.com">email me anytime</a> 📥</p>
+    <p>Liked it? Feel free to <a href="mailto:dave@ardourdesign.com">email me anytime</a> 📥</p>
     </body>
-</html>
+</html>     
