--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="box">
     <h1>David Pentland</h1>
     <p>Welcome to my digital business card 🤲</p>
-    <p>There's not much of interest here. You probably want to <a href="https://github.com/trade-luke/trade-luke.github.io/blob/master/David-Pentland_Portfolio-Dec2023.pdf">check out my portfolio instead</a> 👀</p>
+    <p>There's not much of interest here. You probably want to <a href="https://drive.google.com/file/d/1zpxLlt8nJKv9gSplnm4mwM7UUfIVmas_/view">check out my portfolio instead</a> 👀</p>
     <p>Liked it? Feel free to <a href="mailto:dave@ardourdesign.com">email me anytime</a> 📥</p>
     </body>
 </html>     
