--- a/disco/index.html
+++ b/disco/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Luke Hefson</title>
+  <title>Dave Pentland</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
